@@ -29,25 +29,26 @@ Boston, MA 02111-1307, USA.  */
 #include <stdarg.h>
 #endif
 
-#define LINESIZ 520
+#define LINESIZ     520
 
-static gp_boolean list_enabled;
+static gp_boolean             list_enabled;
 static const gp_section_type *line_section;
 
 static void
-open_source(const char *name, gp_symbol_type *symbol)
+_open_source(const char *name, gp_symbol_type *symbol)
 {
-  char file_name[PATH_MAX + 1];
-  struct list_context *new = GP_Malloc(sizeof(*new));
-  int i;
+  char                 file_name[PATH_MAX + 1];
+  struct list_context *new;
+  int                  i;
 
   assert(name != NULL);
 
+  new = GP_Malloc(sizeof(*new));
   new->f = fopen(name, "rt");
   if (new->f == NULL) {
     /* Try searching include pathes. */
     for (i = 0; i < state.numpaths; i++) {
-      snprintf(file_name, sizeof(file_name), "%s" COPY_CHAR "%s", state.paths[i], name);
+      snprintf(file_name, sizeof(file_name), "%s" PATH_SEPARATOR_STR "%s", state.paths[i], name);
       new->f = fopen(file_name, "rb");
       if (new->f != NULL) {
         name = file_name;
@@ -56,7 +57,7 @@ open_source(const char *name, gp_symbol_type *symbol)
     }
     if (new->f == NULL) {
       /* The path may belong to a build procedure other than this. */
-      const char *p = strrchr(name, PATH_CHAR);
+      const char *p = strrchr(name, PATH_SEPARATOR_CHAR);
 
       if (p != NULL) {
         for (i = 0; i < state.numpaths; i++) {
@@ -90,7 +91,7 @@ open_source(const char *name, gp_symbol_type *symbol)
 }
 
 static void
-close_src(void)
+_close_source(void)
 {
   struct list_context *old;
 
@@ -102,7 +103,7 @@ close_src(void)
 }
 
 static void
-lst_line(const char *format, ...)
+_lst_line(const char *format, ...)
 {
   if (state.lst.f != NULL) {
     va_list args;
@@ -114,10 +115,10 @@ lst_line(const char *format, ...)
 }
 
 static const gp_linenum_type *
-find_line_number(const gp_symbol_type *symbol, int line_number)
+_find_line_number(const gp_symbol_type *symbol, int line_number)
 {
   const gp_section_type *section;
-  const gp_linenum_type *line = NULL;
+  const gp_linenum_type *line;
 
   section = state.object->sections;
 
@@ -131,10 +132,13 @@ find_line_number(const gp_symbol_type *symbol, int line_number)
           state.lst.was_org = line->address;
           line_section = section;
         }
+
         return line;
       }
+
       line = line->next;
     }
+
     section = section->next;
   }
 
@@ -142,12 +146,15 @@ find_line_number(const gp_symbol_type *symbol, int line_number)
 }
 
 static char *
-expand(const char *buf)
+_expand_tabs(const char *buf)
 {
-  int is, id;
-  static char dest[LINESIZ], c;
+  static char dest[LINESIZ];
 
-  for (is = 0, id = 0; (c = buf[is]) != '\0' && id < (sizeof(dest) - 2); ++is) {
+  int         is;
+  int         id;
+  char        c;
+
+  for (is = 0, id = 0; ((c = buf[is]) != '\0') && (id < (sizeof(dest) - 2)); ++is) {
     if (c == '\t') {
       unsigned int n = TABULATOR_SIZE - (id % TABULATOR_SIZE);
 
@@ -159,27 +166,31 @@ expand(const char *buf)
       dest[id++] = c;
     }
   }
+
   dest[id] = '\0';
   return dest;
 }
 
 static void
-write_src(int last_line)
+_write_source(int last_line)
 {
-  char linebuf[LINESIZ];
-  char dasmbuf[LINESIZ];
-  char *pc;
-  const gp_linenum_type *line = NULL;
-  gp_boolean first_time;
-  int org = 0;
+  char        linebuf[LINESIZ];
+  char        dasmbuf[LINESIZ];
+  char       *pc;
+  const       gp_linenum_type *line;
+  gp_boolean  first_time;
+  int         org;
 
-  /* if the source file wasn't found, can't write it to the list file */
+  /* If the source file wasn't found, can't write it to the list file. */
   if (state.lst.src->missing_source) {
     return;
   }
 
-  while (1) {
-    /* when last_line is 0 print all lines, else print to last_line */
+  org  = 0;
+  line = NULL;
+
+  while (true) {
+    /* When last_line is 0 print all lines, else print to last_line. */
     if ((last_line > 0) && (state.lst.src->line_number > last_line)) {
       break;
     }
@@ -200,18 +211,17 @@ write_src(int last_line)
 
       first_time = true;
 
-      line = find_line_number(state.lst.src->symbol, state.lst.src->line_number);
+      line = _find_line_number(state.lst.src->symbol, state.lst.src->line_number);
       while (line != NULL) {
         unsigned int len;
 
-        /* print all instructions generated by this line of the source */
-
+        /* Print all instructions generated by this line of the source. */
         if (line->line_number != state.lst.src->line_number) {
           break;
         }
 
-        if (first_time == false) {
-          /* only print the source line the first time */
+        if (!first_time) {
+          /* Only print the source line the first time. */
           linebuf[0] = '\0';
         }
 
@@ -220,7 +230,13 @@ write_src(int last_line)
         len = b_memory_get_unlisted_size(line_section->data, org);
 
         if (len == 0) {
-          lst_line("%42s %s", "", linebuf);
+          if (linebuf[0] != '\0') {
+            _lst_line("%42s %s", "", linebuf);
+          }
+          else {
+            _lst_line("");
+          }
+
           cod_lst_line(COD_NORMAL_LST_LINE);
         }
         else {
@@ -231,11 +247,8 @@ write_src(int last_line)
 
               b_memory_assert_get(line_section->data, org, &byte, NULL, NULL);
               gp_disassemble_byte(line_section->data, org, state.class, dasmbuf, sizeof(dasmbuf));
-              lst_line("%06lx   %02x       %-24s %s",
-                       gp_processor_byte_to_org(state.class, org),
-                       (unsigned int)byte,
-                       expand(dasmbuf),
-                       linebuf);
+              _lst_line("%06lx   %02x       %-24s %s", gp_processor_byte_to_org(state.class, org),
+                        (unsigned int)byte, _expand_tabs(dasmbuf), linebuf);
               b_memory_set_listed(line_section->data, org, 1);
               state.lst.was_org = org;
               cod_lst_line(COD_NORMAL_LST_LINE);
@@ -250,8 +263,8 @@ write_src(int last_line)
             num_bytes = gp_disassemble_size(line_section->data, org, state.class, 0x80,
                                             state.processor->prog_mem_size, GPDIS_SHOW_ALL_BRANCH,
                                             dasmbuf, sizeof(dasmbuf), len);
-            lst_line("%06lx   %04x     %-24s %s",
-                     gp_processor_byte_to_org(state.class, org), word, expand(dasmbuf), linebuf);
+            _lst_line("%06lx   %04x     %-24s %s",
+                     gp_processor_byte_to_org(state.class, org), word, _expand_tabs(dasmbuf), linebuf);
             b_memory_set_listed(line_section->data, org, num_bytes);
             state.lst.was_org = org;
             cod_lst_line(COD_NORMAL_LST_LINE);
@@ -260,7 +273,7 @@ write_src(int last_line)
             if (num_bytes > 2) {
               state.lst.was_org = org;
               state.class->i_memory_get(line_section->data, org, &word, NULL, NULL);
-              lst_line("%06lx   %04x", gp_processor_byte_to_org(state.class, org), word);
+              _lst_line("%06lx   %04x", gp_processor_byte_to_org(state.class, org), word);
               cod_lst_line(COD_NORMAL_LST_LINE);
               org += 2;
 
@@ -271,12 +284,19 @@ write_src(int last_line)
             }
           }
         }
+
         first_time = false;
         line = line->next;
       }
 
       if (first_time) {
-        lst_line("%42s %s", "", linebuf);
+        if (linebuf[0] != '\0') {
+          _lst_line("%42s %s", "", linebuf);
+        }
+        else {
+          _lst_line("");
+        }
+
         state.cod.emitting = false;
         cod_lst_line(COD_NORMAL_LST_LINE);
       }
@@ -287,15 +307,14 @@ write_src(int last_line)
 }
 
 /*
- * lst_init - initialize the lst file
+ * _lst_init - initialize the lst file
  */
 
 static void
-lst_init(void)
+_lst_init(void)
 {
   if (state.lstfile != OUT_NAMED) {
-    snprintf(state.lstfilename, sizeof(state.lstfilename),
-             "%s.lst", state.basefilename);
+    snprintf(state.lstfilename, sizeof(state.lstfilename), "%s.lst", state.basefilename);
   }
 
   if ((gp_num_errors > 0) || (state.lstfile == OUT_SUPPRESS)) {
@@ -319,29 +338,31 @@ lst_init(void)
   state.lst.was_org = 0;
   state.cod.emitting = false;
 
-  lst_line("%s", GPLINK_VERSION_STRING);
-  lst_line("%s", GPUTILS_COPYRIGHT_STRING);
-  lst_line("Listing File Generated: %s", state.startdate);
-  lst_line(" ");
-  lst_line(" ");
-  lst_line("Address  Value    Disassembly              Source");
-  lst_line("-------  -----    -----------              ------");
+  _lst_line("%s", GPLINK_VERSION_STRING);
+  _lst_line("%s", GPUTILS_COPYRIGHT_STRING);
+  _lst_line("Listing File Generated: %s", state.startdate);
+  _lst_line(" ");
+  _lst_line(" ");
+  _lst_line("Address  Value    Disassembly              Source");
+  _lst_line("-------  -----    -----------              ------");
 }
 
 void
 write_lst(void)
 {
-  gp_symbol_type *symbol = state.object->symbols;
+  gp_symbol_type    *symbol;
   const gp_aux_type *aux;
-  gp_boolean first_time = true;
+  gp_boolean         first_time;
 
-  lst_init();
+  _lst_init();
 
   if (!state.lst.enabled) {
     return;
   }
 
-  list_enabled = true;
+  symbol        = state.object->symbols;
+  list_enabled  = true;
+  first_time    = true;
   state.lst.src = NULL;
 
   /* scan through the file symbols */
@@ -355,13 +376,13 @@ write_lst(void)
         /* it is an include file, so print the current file
            until the line number is reached */
         assert(state.lst.src != NULL);
-        write_src(aux->_aux_symbol._aux_file.line_number);
+        _write_source(aux->_aux_symbol._aux_file.line_number);
       } else {
         /* it is not an include, so enable listing */
         list_enabled = true;
       }
 
-      open_source(aux->_aux_symbol._aux_file.filename, symbol);
+      _open_source(aux->_aux_symbol._aux_file.filename, symbol);
 
       if (first_time) {
         /* write the line numbers for the lst file header */
@@ -376,19 +397,20 @@ write_lst(void)
       }
     } else if (symbol->class == C_EOF) {
       /* print the rest of the current file then, close it */
-      write_src(0);
-      close_src();
+      _write_source(0);
+      _close_source();
     } else if (symbol->class == C_LIST) {
       if (strcasecmp(symbol->name, ".list") == 0) {
-        write_src(symbol->value);
+        _write_source(symbol->value);
         list_enabled = true;
       } else if (strcasecmp(symbol->name, ".nolist") == 0) {
-        write_src(symbol->value);
+        _write_source(symbol->value);
         list_enabled = false;
       } else {
         assert(0);
       }
     }
+
     symbol = symbol->next;
   }
 
